--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,8 @@
     "name" : "todo-app",
     "builds" : [
         { "src" : "src/app.js", "use" : "@vercel/node"}
+    ],
+    "routes": [
+        { "src": "/(.*)", "dest": "src/app.js" }
     ]
 }
