--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "name" : "todo-app",
     "builds" : [
-        { "src" : "app.js", "use" : "@vercel/node"}
+        { "src" : "src/app.js", "use" : "@vercel/node"}
     ],
     "routes": [
         { "src": "/(.*)", "dest": "src/app.js" }
